--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      args:
-        NEXT_PUBLIC_API_URL: http://host.docker.internal:3001
     container_name: pos-frontend
     ports:
       - "3000:3000"
     environment:
       NODE_ENV: production
-      NEXT_PUBLIC_API_URL: http://host.docker.internal:3001
+      NEXT_PUBLIC_API_URL: "http://localhost:3001"
     restart: unless-stopped
